# spec-generator

./: README.md
.claude/: settings.json
.claude-plugin/: PLUGIN_SUMMARY.md  marketplace.json  plugin.json
commands/: stspec-c.md
skills/stspec/: SKILL.md
skills/stspec/references/: default-template.md  task-examples.md  template-guide.md
skills/stspec/scripts/: build.sh  stspec
skills/stspec/scripts/stspec-cli/: Cargo.toml  README.md
skills/stspec/scripts/stspec-cli/src/: git.rs  main.rs  spec.rs  template.rs
